--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <h3 style="padding-top: 10px;">AJ BLOG</h3>
             <div class="side-nav">
-                <a href="#https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub">Subscribe</h5></a>
+                <a href="https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub">Subscribe</h5></a>
                 <div class="search">
                     <h5>Sign in</h5>
                     <i class="fa fa-search"></i>
