--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
     </head>
     <main>
-        <div class="hero">
+        <div class="hero ">
         </div>
-        <div class="hero-info">
-            <div class="hero-division">
+        <div class="hero-info slide-in">
+            <div class="hero-division slide-in">
                 <div class="letter">
                     <h5>Aj's</h5>
                     <h6>Profile</h6>
@@ -55,7 +55,7 @@
                     <p>PHOTO BY FACEAPP/AJ'S COLLECTION</p>
                 </div>
             </div>
-            <div class="me">
+            <div class="me slide-in">
                 <img src="./image/581608384.jpg" alt="">
             </div>
         </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="bag">
             <div class="section1">
-                <div class="sectinfo">
+                <div class="sectinfo slide-in">
                     <div class="sectinfo1">
                         <H1>ABOUT</H1>
                         <H1>ME</H1>
@@ -83,7 +83,7 @@
                          Graphic designer and Web Developer. i was born<br>
                           on the 19th of january 2004</p>
                 </div>  
-                <div class="casimg">
+                <div class="casimg slide-in">
                     <img src="./image/-1536605628.jpg" style="width: 25vw; height: 50vh;" alt="">
                 </div>
              </div>
@@ -101,6 +101,58 @@
                     
             </div>
         </div>
+    </section>
+    <section>
+        <div class="section2">
+            <div class="sect2div">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                      <div class="flip-box-front">
+                        <i style="font-size: 70px; color: red;" class="fa fa-youtube"></i>
+                        <h4 style="color: rgb(176, 176, 176); font-weight: 900;">MAKING YOUTUBE VIDEOS</h4>
+                        <h6 style="font-size: 12px;">I have been making youtube<br>
+                        since 2020 with over<br>
+                         4k Subscribers</h6>
+                      </div>
+                      <div class="flip-box-back">
+                        <a href="https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub2">Subscribe</h5></a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sect2div">
+                <div class="flip-box2">
+                    <div class="flip-box2-inner">
+                      <div class="flip-box2-front">
+                        <i style="font-size: 70px; color: purple;" class="fa fa-twitch"></i>
+                        <h4 style="color: rgb(176, 176, 176); font-weight: 900;">STREAMING ON TWITCH</h4>
+                        <h6 style="font-size: 12px;">I am an upcomingstreamer <br>
+                        please show support,<br>
+                        Please Follow</h6>
+                      </div>
+                      <div class="flip-box2-back">
+                        <a href="https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub3">Follow</h5></a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sect2div">
+                <div class="flip-box3">
+                    <div class="flip-box3-inner">
+                      <div class="flip-box3-front">
+                        <i style="font-size: 70px; color: blue;" class="fa fa-instagram"></i>
+                        <h4 style="color: rgb(176, 176, 176); font-weight: 900;">INSTAGRAM CONTENT CREATOR</h4>
+                        <h6 style="font-size: 12px;">I have been making youtube<br>
+                        since 2020 with over<br>
+                         4k Subscribers</h6>
+                      </div>
+                      <div class="flip-box3-back">
+                        <a href="https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub4">Follow</h5></a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
     </section>
 
     <script src="main.js"></script>
