--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         Please Follow</h6>
                       </div>
                       <div class="flip-box2-back">
-                        <a href="https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub3">Follow</h5></a>
+                        <a href="https://www.twitch.tv/ajs_reaction"><h5 class="side-nav-sub3">Follow</h5></a>
                       </div>
                     </div>
                 </div>
@@ -142,12 +142,13 @@
                       <div class="flip-box3-front">
                         <i style="font-size: 70px; color: blue;" class="fa fa-instagram"></i>
                         <h4 style="color: rgb(176, 176, 176); font-weight: 900;">INSTAGRAM CONTENT CREATOR</h4>
-                        <h6 style="font-size: 12px;">I have been making youtube<br>
-                        since 2020 with over<br>
-                         4k Subscribers</h6>
+                        <h6 style="font-size: 12px;">I promote producs on my Instagram so make<br>
+                        sure to drop a Follow and dm for<br>
+                        shout-out on any product <br>
+                         </h6>
                       </div>
                       <div class="flip-box3-back">
-                        <a href="https://www.youtube.com/channel/UCxsTrJMFuSojCPz7C7EPkiA"><h5 class="side-nav-sub4">Follow</h5></a>
+                        <a href="https://www.instagram.com/y_hammzy19/?next=%2F"><h5 class="side-nav-sub4">Follow</h5></a>
                       </div>
                     </div>
                 </div>
