--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </head>
     <main>
-        <div class="hero ">
+        <div class="hero " id="particles-js">
         </div>
         <div class="hero-info slide-in">
             <div class="hero-division slide-in">
@@ -105,7 +105,7 @@
     <section>
         <div class="section2">
             <div class="sect2div">
-                <div class="flip-box">
+                <div class="flip-box slide-in">
                     <div class="flip-box-inner">
                       <div class="flip-box-front">
                         <i style="font-size: 70px; color: red;" class="fa fa-youtube"></i>
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="sect2div">
-                <div class="flip-box3">
+                <div class="flip-box3 slide-in">
                     <div class="flip-box3-inner">
                       <div class="flip-box3-front">
                         <i style="font-size: 70px; color: blue;" class="fa fa-instagram"></i>
@@ -155,7 +155,64 @@
             </div>
         </div> 
     </section>
+    <section>
+        <div class="sect2">
+            <div class="contentcreation">
+                <h1>SPECIALTIES</h1>
+                <div class="starcont">
+                    <div>------------------------</div>
+                    <i class="fa fa-star" style="color: red;"></i>
+                    <div>------------------------</div>
+                </div>
+                    
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="drop">
+                <div style="--clr:#ff0f5b;" class="content">
+                    <h2 style="--clr:#ff0f5b;">1</h2>
+                    <h3>Web Designer</h3>
+                    <H6>1 Year Experience</H6>
+                    <a href="">Read More</a>
+                </div>
+            </div>
+            <div class="drop" style="--clr:#a200ff;">
+                <div class="content">
+                    <h2>2</h2>
+                    <h3>Soap Making</h3>
+                    <H6>6 Year Experience</H6>
+                    <a href="">Read More</a>
+                </div>
+            </div>
+            <div class="drop" style="--clr:#003cff;">
+                <div class="content">
+                    <h2>3</h2>
+                    <h3>Graphic Designer</h3>
+                    <H6>1 Year Experience</H6>
+                    <a href="">Read More</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section>
+        <div class="section4">
+            <div class="sect3Ggraphic">
+               <h3>GRAPHIC DESIGNER</h3>
+               <H6>1 Year Experience</H6>
+           </div>
+           <div class="sect3react">
+               <h3>REACT</h3>
+               <H6>1 Year Experience</H6>
+           </div>
+            
+        </div>
+    </section>
 
     <script src="main.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
