--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         </div>
     </section>
-    <section>
+    <!-- <section>
         <div class="section4">
             <div class="sect3Ggraphic">
                <h3>GRAPHIC DESIGNER</h3>
@@ -209,7 +209,7 @@
            </div>
             
         </div>
-    </section>
+    </section> -->
 
     <script src="main.js"></script>
     <script src="particles.js"></script>
