--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <h5>Aj's</h5>
                     <h6>Profile</h6>
                 </div>
-                <h3>Yisa Ajibola</h3>
+                <h3 class="bouncing-title"><span class="bounce">Y</span><span>i</span><span>s</span><span>a</span>
+                    <span>A</span><span>j</span><span>i</span><span>b</span><span>o</span><span>l</span><span>a</span></h3>
                 <h6>Founder, YAAJ Soap making Enterprises</h6>
                 <div class="net">
                     <h3 style="color: red;">$20</h3>
@@ -214,5 +215,6 @@
     <script src="main.js"></script>
     <script src="particles.js"></script>
     <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
